[package]
name = "tinymqtt"
description = "A very tiny MQTT client, mainly for embedded systems"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Feuermagier/tinymqtt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8.0"
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
