[package]
name = "tinymqtt"
description = "A very tiny no-std MQTT client, mainly for embedded systems"
keywords = ["mqtt", "embedded", "iot", "no-std"]
categories = ["network-programming", "embedded", "no-std"]
version = "0.1.3"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Feuermagier/tinymqtt"
repository = "https://github.com/Feuermagier/tinymqtt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
